# librterm

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  asan.supp  chartest  chartest.cpp  color.cpp  conanfile.py  conanfile.txt  curses  curses.cpp  event.h  font.cpp  font.h  key.cpp  key.h  libterm.cbp  libterm.pro  main.cpp  term.cpp  term.h
ci/: install.bat  install.sh  run.bat  run.sh
ci/appveyor/compile/mingw/: conan.bat  local.bat  system.bat
ci/appveyor/compile/msvc/: conan.bat  local.bat  system.bat
ci/appveyor/install/: fixpath.bat
ci/appveyor/install/mingw/: conan.bat  local.bat  system.bat
ci/appveyor/install/msvc/: conan.bat  local.bat  system.bat
ci/appveyor/package/: package.bat
ci/appveyor/run/: run.bat
ci/travis/: conan.sh  local.sh  run.sh  system.sh  xvfb.sh
ci/travis/fake_dlclose/: CMakeLists.txt  README.md  dlclose.c
cmake/: DownloadProject.cmake  ExternalFreetype.txt.in  ExternalSDL2.txt.in  Sanitizers.cmake
demo/: CMakeLists.txt  demo  main  main.cpp  test  test.cpp
include/: api.h  char.h  color.h  error.h  event.h  event_system.h  font.h  framerate_counter.h  gl_hardware_texture.tpp  gl_renderer.tpp  glyph_cache.h  hardware_texture.h  inputsystem.h  key.h  keycode.h  logger.h  mouse.h  rect.h  renderer.h  screen_view.h  sdl_hardware_texture.tpp  sdl_loader.h  sdl_lock.h  sdl_ptr.h  sdl_renderer.h  sdl_renderer.tpp  software_texture.h  term.h  term.tpp  term_format.h  texture.h  texture_view.h  tilefont.h  ttfont.h  util.h  virtualconsole.h  window.h
include/rterm/: char.h  error.h  event_system.h  font.h  gl_hardware_texture.tpp  gl_renderer.tpp  glyph_cache.h  hardware_texture.h  image.h  keycode.h  logger.h  mouse.h  rect.h  rterm.h  screen_view.h  sdl_loader.h  sdl_renderer.tpp  software_texture.h  span.h  term.tpp  term_format.h  tilefont.h  ttfont.h  virtualconsole.h  window.h
include/rterm/buffer/: buffer.h  row.h
include/rterm/cell/: cell.h
include/rterm/color/: color.h
include/rterm/font/: collection.h  face.h  filter.h  font.h  handle.h  properties.h
include/rterm/font/source/: coretext.h  directwrite.h  fontconfig.h
include/rterm/image/: format.h  image.h
include/rterm/rasterizer/: font.h  glyph_cache.h  tilefont.h  ttfont.h
include/rterm/renderer/: gl_hardware_texture.tpp  gl_renderer.tpp  hardware_texture.h  renderer.h  screen_view.h  sdl_hardware_texture.tpp  sdl_renderer.tpp  software_texture.h  texture_view.h
include/rterm/shaper/: cluster.h  glyph.h  shaper.h
include/rterm/term/: term.h  term.tpp  term_format.h  virtualconsole.h
include/rterm/terminal/: options.h  terminal.h
include/rterm/unicode/: grapheme.h  grapheme_string.h  unicode.h
include/rterm/util/: api.h  char.h  color.h  debug.h  defs.h  enum.h  exception.h  expected.h  framerate_counter.h  fs.h  logger.h  murmur.h  murmur_test.h  named_args.h  optional.h  rect.h  scoped_guard.h  span.h  static_pimpl.h  string.h  sync.h  variant.h  vector.h
include/rterm/window/: event.h  event_system.h  key.h  window.h
src/: .font.cpp.swp  char.cpp  color.cpp  color.h  error.cpp  event.cpp  event_system.cpp  font.cpp  font.h  framerate_counter.cpp  glyph_cache.cpp  hardware_texture.cpp  image.cpp  inputsystem.cpp  key.cpp  key.h  logger.cpp  main.cpp  sdl_loader.cpp  sdl_renderer.cpp  software_texture.cpp  term.cpp  term.h  tilefont.cpp  ttfont.cpp  virtualconsole.cpp  window.cpp
src/buffer/: buffer.cpp
src/color/: color.cpp
src/font/: collection.cpp  filter.cpp  font.cpp
src/font/source/: fontconfig.cpp
src/rasterizer/: glyph_cache.cpp  tilefont.cpp  ttfont.cpp
src/renderer/: hardware_texture.cpp  sdl_renderer.cpp  software_texture.cpp
src/term/: term.cpp  virtualconsole.cpp
src/terminal/: options.cpp  terminal.cpp
src/unicode/: unicode.cpp
src/util/: char.cpp  color.cpp  error.cpp  exception.cpp  framerate_counter.cpp  logger.cpp
src/util/sdl/: sdl_loader.cpp
src/window/: event.cpp  event_system.cpp  key.cpp  window.cpp
test/: CMakeLists.txt  benchmark  benchmark.cpp  fonts.cpp  icu-test.cpp  minimal.cpp  mouse.cpp  simple.cpp  userinput  userinput.cpp
